# opensearch-index-viewer

./: .gitignore  CHANGELOG.md  LICENSE  MODULE_SUMMARY.md  README.md  pyproject.toml  run.py
examples/: sample_indexes.json
opensearch_index_viewer/: __init__.py  __main__.py  cli.py  viewer.py
tests/: __init__.py  test_cli.py  test_viewer.py
